Fixed the game collapsing on small screens
Fixed newlines being created in game when the game is larger than the
screen. Updated layout.txt

--- a/style.css
+++ b/style.css
@@ -28,7 +28,3 @@
 	left: 0;
 	color: white;
 }
-
-input {
-	float: left;
-}
